# Fast-Convergent-Proximity-Graphs-for-Approximate-Nearest-Neighbor-Search

./: CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake
include/efanna2e/: index.h  index_alphacng.h  neighbor.h  parameters.h
src/: Makefile  cmake_install.cmake  index.cpp  index_alphacng.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  test_alphacng_index.cpp  test_alphacng_search.cpp
